More tightening of `Utilities::extractClientUrlPrefixFromHeaders`